@@ -19,7 +19,7 @@
 /**
  * advice00
  * Maple Road: Entrance - Mushroom Town Training Camp (Map 0)
- * 
+ *
  * Gives an hint to new players on movement.
  *
  * @author GoldenKevin
