@@ -19,7 +19,7 @@
 /**
  * advice06
  * Maple Road: Mushroom Town (Map 10000)
- * 
+ *
  * Gives an hint to new players on movement.
  *
  * @author GoldenKevin
