@@ -19,7 +19,7 @@
 /**
  * advice08
  * Maple Road: Snail Hunting Ground I (Map 40000)
- * 
+ *
  * Gives an hint to new players on checking their stats.
  *
  * @author GoldenKevin
